# Pragttle

./: .gitignore  Makefile  README.md
.github/workflows/: ci-cd.yml
apps/backend/: Cargo.toml  Dockerfile
apps/backend/.sqlx/: query-036fc9b5dedbe74abf371db356456c459a4fc18177747c57ab03f563d690fc9f.json  query-0da8014b6987f2a4415264749aea473b19ac1cba44e6894f0ffa4a6f2a215b79.json  query-2199b878a4d79e97fbbda8dc5efdd51a6250eba9cbdb6d892ecfa8c66537d7eb.json  query-359ff9f11e05a34af31beb2dda0d18c17998f66eccb98d7cecf983cfefbb42cf.json  query-39e3b92caf791fd1cf5b21baa48c38a712abf0cb0c65bb3755fb2566a0deb7bb.json  query-75f228f107158084dfa270ef084b3cbfe8f2b125cfc215a69f9805f9a0b4c01c.json  query-b2eb27cb6807ff7b688acb5b89de2a5a8397af4a8fb78699acae4f828b8da03e.json  query-b6d45383928935ad0594bdf7de0bf66315b44b10dcd9efa73b75443b8545706e.json
apps/backend/migrations/: 20250101000000_create_tables.sql
apps/backend/src/: main.rs
apps/backend/src/auth/: mod.rs
apps/backend/src/db/: mod.rs
apps/backend/src/models/: mod.rs  post.rs  user.rs
apps/backend/src/routes/: auth.rs  posts.rs
apps/backend/src/services/: mod.rs
apps/frontend/: Dockerfile  README.md  package-lock.json
argo/apps/: postgres.yaml  pragttle.yaml  ragna.yaml
argo/bootstrap/: install-argo.yaml
docs/: argo-cd-fix.md  ci-cd-pipeline.md  frontend-progress.md  next-steps.md  quick-start-ci-cd.md  setup.md
scripts/: bootstrap.sh  build-images.sh  configure-argocd-registry.sh  create-ghcr-secret.sh  deploy-custom-images.sh  load-images.sh  setup-github-secrets.sh  start-ci-cd.sh
(+227 files in other folders)
